--- a/hugging_face_gpt_fail.ipynb
+++ b/hugging_face_gpt_fail.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1a3889d4-9a96-451f-8657-cf84154a941b",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "be622d55-0254-49bd-8259-4a6d86ba4526",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b5597620-e239-4ddf-b239-ff068a70b917",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,65 @@
    "execution_count": null,
    "id": "3744188e-7e91-4b3b-8511-9beecf23e5d8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "loading file vocab.json from cache at C:\\Users\\TaraChiatovich\\.cache\\huggingface\\hub\\models--microsoft--DialoGPT-medium\\snapshots\\7b40bb0f92c45fefa957d088000d8648e5c7fa33\\vocab.json\n",
+      "loading file merges.txt from cache at C:\\Users\\TaraChiatovich\\.cache\\huggingface\\hub\\models--microsoft--DialoGPT-medium\\snapshots\\7b40bb0f92c45fefa957d088000d8648e5c7fa33\\merges.txt\n",
+      "loading file tokenizer.json from cache at None\n",
+      "loading file added_tokens.json from cache at None\n",
+      "loading file special_tokens_map.json from cache at None\n",
+      "loading file tokenizer_config.json from cache at C:\\Users\\TaraChiatovich\\.cache\\huggingface\\hub\\models--microsoft--DialoGPT-medium\\snapshots\\7b40bb0f92c45fefa957d088000d8648e5c7fa33\\tokenizer_config.json\n",
+      "loading configuration file config.json from cache at C:\\Users\\TaraChiatovich\\.cache\\huggingface\\hub\\models--microsoft--DialoGPT-medium\\snapshots\\7b40bb0f92c45fefa957d088000d8648e5c7fa33\\config.json\n",
+      "Model config GPT2Config {\n",
+      "  \"_name_or_path\": \"microsoft/DialoGPT-medium\",\n",
+      "  \"activation_function\": \"gelu_new\",\n",
+      "  \"architectures\": [\n",
+      "    \"GPT2LMHeadModel\"\n",
+      "  ],\n",
+      "  \"attn_pdrop\": 0.1,\n",
+      "  \"bos_token_id\": 50256,\n",
+      "  \"embd_pdrop\": 0.1,\n",
+      "  \"eos_token_id\": 50256,\n",
+      "  \"initializer_range\": 0.02,\n",
+      "  \"layer_norm_epsilon\": 1e-05,\n",
+      "  \"model_type\": \"gpt2\",\n",
+      "  \"n_ctx\": 1024,\n",
+      "  \"n_embd\": 1024,\n",
+      "  \"n_head\": 16,\n",
+      "  \"n_inner\": null,\n",
+      "  \"n_layer\": 24,\n",
+      "  \"n_positions\": 1024,\n",
+      "  \"reorder_and_upcast_attn\": false,\n",
+      "  \"resid_pdrop\": 0.1,\n",
+      "  \"scale_attn_by_inverse_layer_idx\": false,\n",
+      "  \"scale_attn_weights\": true,\n",
+      "  \"summary_activation\": null,\n",
+      "  \"summary_first_dropout\": 0.1,\n",
+      "  \"summary_proj_to_labels\": true,\n",
+      "  \"summary_type\": \"cls_index\",\n",
+      "  \"summary_use_proj\": true,\n",
+      "  \"task_specific_params\": {\n",
+      "    \"conversational\": {\n",
+      "      \"max_length\": 1000\n",
+      "    }\n",
+      "  },\n",
+      "  \"transformers_version\": \"4.41.0.dev0\",\n",
+      "  \"use_cache\": true,\n",
+      "  \"vocab_size\": 50257\n",
+      "}\n",
+      "\n",
+      "loading weights file pytorch_model.bin from cache at C:\\Users\\TaraChiatovich\\.cache\\huggingface\\hub\\models--microsoft--DialoGPT-medium\\snapshots\\7b40bb0f92c45fefa957d088000d8648e5c7fa33\\pytorch_model.bin\n",
+      "Generate config GenerationConfig {\n",
+      "  \"bos_token_id\": 50256,\n",
+      "  \"eos_token_id\": 50256\n",
+      "}\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Initiate the model\n",
     "tokenizer = AutoTokenizer.from_pretrained(\"microsoft/DialoGPT-medium\", padding_side='left')\n",
@@ -73,6 +131,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Although I got this to run before (see the screenshot in my slides), I could not get it to run after putting the code in \n",
+    "# a new notebook. This is yet another fail! It may have to do with me installing a different version of the packages used,\n",
+    "# but it adds to the mystery of the immense failure I have had with this simpler open-source version of GPT!\n",
     "# Let's chat for 5 lines\n",
     "for step in range(5):\n",
     "    # encode the new user input, add the eos_token and return a tensor in Pytorch\n",
@@ -96,7 +157,16 @@
    "name": ".env"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
