style: remove unneeded code and clarify comments

--- a/hugging_face_dataset.ipynb
+++ b/hugging_face_dataset.ipynb
@@ -50,12 +50,8 @@
     "# The dataset we're using is here on Hugging Face: \n",
     "# Let's load the dataset into our Python session\n",
     "\n",
-    "# This is the code copied from Hugging Face, which did load the data in the way I expected (not able to use pandas commands to understand or \n",
-    "# maniuplate the data). I'm including the code here for reference and would love to hear from anyone who figures out how to work with data in\n",
-    "# this state!\n",
-    "# student_performance_data = load_dataset(\"mstz/student_performance\", \"math\")[\"train\"]\n",
-    "\n",
-    "# This will get you a pandas dataframe of this dataset, which I can definitely work with!\n",
+    "# Note that the card in Hugging Face for this dataset gave different code to load it. I like working with Pandas dataframes\n",
+    "# so am giving the code below so that people can work in Pandas.\n",
     "student_performance_data =  load_dataset(\"mstz/student_performance\", \"math\")[\"train\"].to_pandas()"
    ]
   },
